Related tdf#105500: leaks in PaletteManager and SvxColorToolBoxControl

See comments of the bugtracker for more details
Again thank you Alex for very useful information about leaks!

Change-Id: I96743e8b167224f1bec73db5f2ba82536c7f23fa
Reviewed-on: https://gerrit.libreoffice.org/41265
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit 8c0cc5cd7befffc6e8e6361ba67807a799cc997f)