svx/source/tbxctrls/PaletteManager.cxx
@@ -61,6 +61,7 @@ PaletteManager::PaletteManager() :
 
 PaletteManager::~PaletteManager()
 {
+    m_Palettes.clear();
 }
 
 void PaletteManager::LoadPalettes()
